--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "cebe/yii2-gravatar": "*"
     },
     "autoload": {
         "psr-4": {
