--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,23 @@
     "name": "dmstr/yii2-adminlte-asset",
     "description": "Backend theme for Yii2 Framework",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension"],
+    "keywords": ["yii2","extension","adminlte"],
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Tobias Munk",
             "email": "tobias@diemeisterei.de"
+        },
+        {
+            "name": "Evgeniy Tkachenko",
+            "email": "et.coder@gmail.com"
         }
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "cebe/yii2-gravatar": "*"
+        "cebe/yii2-gravatar": "*",
+        "bower-asset/admin-lte": "*",
+        "bower-asset/font-awesome": "*"
     },
     "autoload": {
         "psr-4": {
