--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
+        "yiisoft/yii2-bootstrap": "*",
         "cebe/yii2-gravatar": "*",
         "bower-asset/admin-lte": "*",
         "bower-asset/font-awesome": "*"
