--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "cebe/yii2-gravatar": "*",
+        "yiisoft/yii2": "2.*",
+        "yiisoft/yii2-bootstrap": "2.*",
+        "cebe/yii2-gravatar": "1.*",
         "bower-asset/admin-lte": "~1.3",
-        "bower-asset/font-awesome": "*"
+        "bower-asset/font-awesome": "~4.0"
     },
     "autoload": {
         "psr-4": {
