--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,17 @@
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
         "cebe/yii2-gravatar": "1.*",
-        "bower-asset/admin-lte": "~1.3",
+        "bower-asset/admin-lte": "~2.0",
         "bower-asset/font-awesome": "~4.0"
     },
     "autoload": {
         "psr-4": {
             "dmstr\\": ""
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
         }
     }
 }
