--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
-        "rmrevin/yii2-fontawesome": "2.9.*",
+        "rmrevin/yii2-fontawesome": "~2.9",
         "bower-asset/admin-lte": "~2.0"
     },
     "require-dev": {
