--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "yiisoft/yii2-bootstrap": "2.*",
         "cebe/yii2-gravatar": "1.*",
         "almasaeed2010/adminlte": "~2.0",
-        "rmrevin/yii2-fontawesome": "2.*"
+        "rmrevin/yii2-fontawesome": "~2.9"
     },
     "autoload": {
         "psr-4": {
