--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "dmstr/yii2-adminlte-asset",
-    "description": "Backend theme for Yii2 Framework",
+    "name": "airani/yii2-adminlte-rtl-asset",
+    "description": "Backend theme for Yii2 Framework (RTL)",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminlte"],
     "license": "BSD-3-Clause",
@@ -12,13 +12,17 @@
         {
             "name": "Evgeniy Tkachenko",
             "email": "et.coder@gmail.com"
+        },
+        {
+            "name": "Ali Irani",
+            "email": "ali@irani.im"
         }
     ],
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
         "cebe/yii2-gravatar": "1.*",
-        "bower-asset/admin-lte": "~2.0",
+        "bower-asset/admin-lte-rtl": "~2.0",
         "rmrevin/yii2-fontawesome": "2.9.*"
     },
     "autoload": {
