Changed namespace to avoid collision with dmstr/yii2-db

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "dmstr\\": ""
+            "dmstr\\adminlte\\": ""
         }
     },
     "repositories": [
